<resources>
    <string name="app_name">Subterminal</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings (Coming soon)</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="gear_manufacturer">Manufacturer</string>
...
    <string name="title_gear">Gear</string>
    <string name="title_exit">Exits</string>
    <string name="exit_name">Name</string>

    <string name="changelog_full_title">Change Log</string>
    <string name="changelog_title">What\'s New</string>
    <string name="changelog_ok_button">OK</string>
    <string name="changelog_show_full">more...</string>
    <string name="background_color">black</string>
    <string name="pick_image_intent_text">Select an image</string>
    <string name="title_settings">Settings</string>

    <string name="activity_not_locked_text">Nothing should happen on this page, here for test purpose</string>
...
